--- a/src/client/public/index.html
+++ b/src/client/public/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>boilerplate</title>
+    <title>music-app</title>
     <meta charset="utf-8">
     <meta name="viewport" content="minimum-scale=1, initial-scale=1, width=device-width, shrink-to-fit=no">
-    <meta name="application-name" content="boilerplate">
-    <meta name="description" content="boilerplate">
+    <meta name="application-name" content="music-app">
+    <meta name="description" content="music-app">
     <meta name="theme-color" content="#ffffff">
     <meta name="msapplication-navbutton-color" content="#FFFFFF">
     <meta name="google" content="notranslate">
@@ -21,6 +21,6 @@
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div data-react id="App"></div>
+    <div id="App"></div>
   </body>
 </html>
