--- a/src/client/public/index.html
+++ b/src/client/public/index.html
@@ -21,6 +21,6 @@
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="App"></div>
+    <div id="Index"></div>
   </body>
 </html>
