--- a/src/client/public/index.html
+++ b/src/client/public/index.html
@@ -20,6 +20,167 @@
 		<link href="/manifest.json" rel="manifest">
 		<link href="https://fonts.googleapis.com/css?family=Roboto:300,400,400i,500,700&display=swap" rel="stylesheet">
 		<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+		<style>
+			:root {
+				--text-color: #333;
+				--elevated-color: #fff;
+				--hover-color: #eee;
+				--button-hover-color: #e0e0e0;
+				--text-color-white: #fff;
+				--text-color-light: #757575;
+				--background-color: #fafafa;
+
+				--font-size: 1px;
+				--font-family: "Roboto";
+
+				--line-height: 1;
+				--info-height: 35rem;
+				--header-height: 60px;
+				--player-height: 96px;
+				--player-height-mobile: 120px;
+
+				--sidebar-width: 300px;
+
+				--border-radius: 5px;
+				--border-color: #e0e0e0;
+
+				--space: 20rem;
+
+				--space-double: calc(var(--space) * 2);
+				--space-one-half: calc(var(--space) * 1.5);
+				--space-one-quart: calc(var(--space) * 1.25);
+				--space-three-quart: calc(var(--space) * 0.75);
+				--space-half: calc(var(--space) * 0.5);
+				--space-quart: calc(var(--space) * 0.25);
+				--space-fifth: calc(var(--space) * 0.2);
+
+				--button-size: 27rem;
+
+				--content-width: 100vw;
+
+				--transition-duration: 0.2s; }
+
+			html {
+				box-sizing: border-box;
+				color: var(--text-color);
+				font-size: var(--font-size);
+				font-family: var(--font-family);
+				line-height: var(--line-height);
+				-moz-osx-font-smoothing: grayscale;
+				-webkit-font-smoothing: antialiased; }
+
+			*,
+			*::after,
+			*::before {
+				margin: 0;
+				padding: 0;
+				color: inherit;
+				font-size: inherit;
+				box-sizing: inherit;
+				font-family: inherit;
+				line-height: inherit; }
+
+			a {
+				text-decoration: none; }
+			a:hover {
+				text-decoration: none; }
+			a:focus {
+				text-decoration: none; }
+			a:hover {
+				text-decoration: none; }
+
+			.scrollbar-measure {
+				width: 100px;
+				top: -9999px;
+				height: 100px;
+				overflow: scroll;
+				position: absolute; }
+
+			.Elevated {
+				box-shadow:
+					0 0 4px rgba(0, 0, 0, 0.14),
+					0 0 3px -2px rgba(0, 0, 0, 0.12),
+					0 0 8px rgba(0, 0, 0, 0.2);
+				background-color: var(--elevated-color); }
+
+			.PaddingQuart {
+				padding: var(--space-quart); }
+
+			.PaddingHalf {
+				padding: var(--space-half); }
+
+			.Padding {
+				padding: var(--space); }
+
+			.PaddingDouble {
+				padding: var(--space-double); }
+
+			.Margin {
+				margin: var(--space); }
+
+			.MarginBottom {
+				margin-bottom: var(--space); }
+
+			.MarginBottomHalf {
+				margin-bottom: var(--space-half); }
+
+			.MarginBottomQuart {
+				margin-bottom: var(--space-quart); }
+
+			.MarginRightHalf {
+				margin-right: var(--space-half); }
+
+			.MarginRightQuart {
+				margin-right: var(--space-quart); }
+
+			.FlexList {
+				display: flex;
+				align-items: center; }
+
+			.FlexListRight {
+				display: flex;
+				align-items: center;
+				flex-direction: row-reverse; }
+
+			.Grid {
+				display: grid;
+				gap: var(--space);
+				grid-template-columns: repeat(auto-fill, minmax(250px, 1fr)); }
+
+			.Card {
+				overflow: hidden;
+				transition-property: box-shadow;
+				border-radius: var(--border-radius);
+				transition-duration: var(--transition-duration); }
+			.Card:hover {
+				box-shadow:
+					0 0 10px rgba(0, 0, 0, 0.14),
+					0 0 18px rgba(0, 0, 0, 0.12),
+					0 0 5px -1px rgba(0, 0, 0, 0.2); }
+
+			.Hover {
+				transition-property: background-color;
+				transition-duration: var(--transition-duration); }
+			.Hover:hover {
+				background-color: var(--hover-color); }
+
+			.ButtonHover {
+				transition: var(--transition-duration) background-color; }
+			.ButtonHover:hover {
+				background-color: var(--button-hover-color); }
+
+			.ItemBorder {
+				border-bottom: 1px solid var(--border-color); }
+			.ItemBorder:last-child {
+				border-bottom: 0; }
+
+			.Text {
+				font-size: 15rem; }
+
+			.Text2 {
+				font-size: 16rem;
+				font-weight: 700; }
+		</style>
 	</head>
 	<body>
 		<noscript>You need to enable JavaScript to run this app.</noscript>
