--- a/src/client/public/index.html
+++ b/src/client/public/index.html
@@ -127,6 +127,9 @@
 			.MarginBottomQuart {
 				margin-bottom: var(--space-quart); }
 
+			.MarginBottomThreeQuart {
+				margin-bottom: var(--space-three-quart); }
+
 			.MarginRightHalf {
 				margin-right: var(--space-half); }
 
@@ -137,10 +140,19 @@
 				display: flex;
 				align-items: center; }
 
+			.FlexListCenter {
+				display: flex;
+				align-items: center;
+				justify-content: center; }
+
 			.Grid {
 				display: grid;
 				gap: var(--space);
 				grid-template-columns: repeat(auto-fill, minmax(250px, 1fr)); }
+
+			.Content {
+				width: 1300rem;
+				margin: 0 auto; }
 
 			.Card {
 				overflow: hidden;
