--- a/src/client/public/index.html
+++ b/src/client/public/index.html
@@ -130,6 +130,9 @@
 			.MarginBottomThreeQuart {
 				margin-bottom: var(--space-three-quart); }
 
+			.MarginBottomFifth {
+				margin-bottom: var(--space-fifth); }
+
 			.MarginRightHalf {
 				margin-right: var(--space-half); }
 
