--- a/src/client/public/index.html
+++ b/src/client/public/index.html
@@ -115,6 +115,12 @@
 			.PaddingDouble {
 				padding: var(--space-double); }
 
+			.PaddingTop {
+				padding-top: var(--space); }
+
+			.PaddingBottom {
+				padding-bottom: var(--space); }
+
 			.Margin {
 				margin: var(--space); }
 
@@ -156,15 +162,15 @@
 				align-items: center;
 				justify-content: flex-end; }
 
-			.Grid {
-				display: grid;
-				gap: var(--space);
-				grid-template-columns: repeat(auto-fill, minmax(250px, 1fr)); }
-
 			.Content {
-				width: 1300rem;
-				margin-left: auto;
-				margin-right: auto; }
+				margin-left: var(--space);
+				margin-right: var(--space); }
+
+			@media (min-width: 1360px) {
+				.Content {
+					width: 1300rem;
+					margin-left: auto;
+					margin-right: auto;} }
 
 			.Card {
 				overflow: hidden;
