--- a/src/client/public/index.html
+++ b/src/client/public/index.html
@@ -185,15 +185,9 @@
 
 			.Hover {
 				cursor: pointer;
-				transition-property: background-color;
-				transition-duration: var(--transition-duration); }
-			.Hover:hover {
-				background-color: var(--hover-color); }
-
-			.ButtonHover {
 				transition: var(--transition-duration) background-color; }
-			.ButtonHover:hover {
-				background-color: var(--button-hover-color); }
+			.Hover:hover {
+				background-color: #e0e0e0; }
 
 			.ItemBorder {
 				border-bottom: 1px solid var(--border-color); }
