--- a/src/client/public/index.html
+++ b/src/client/public/index.html
@@ -54,8 +54,6 @@
 				--space-quart: calc(var(--space) * 0.25);
 				--space-fifth: calc(var(--space) * 0.2);
 
-				--button-size: 27rem;
-
 				--content-width: 100vw;
 
 				--transition-duration: 0.2s; }
@@ -187,7 +185,7 @@
 				cursor: pointer;
 				transition: var(--transition-duration) background-color; }
 			.Hover:hover {
-				background-color: #e0e0e0; }
+				background-color: #eee; }
 
 			.ItemBorder {
 				border-bottom: 1px solid var(--border-color); }
