--- a/src/client/public/index.html
+++ b/src/client/public/index.html
@@ -198,6 +198,11 @@
 			.Text2 {
 				font-size: 16rem;
 				font-weight: 700; }
+
+			#Application {
+				width: 100vw;
+				height: 100vh;
+				background-color: var(--background-color); }
 		</style>
 	</head>
 	<body>
