--- a/src/client/public/index.html
+++ b/src/client/public/index.html
@@ -202,6 +202,8 @@
 			#Application {
 				width: 100vw;
 				height: 100vh;
+				display: flex;
+				flex-direction: column;
 				background-color: var(--background-color); }
 		</style>
 	</head>
