--- a/src/upload/public/index.html
+++ b/src/upload/public/index.html
@@ -23,6 +23,6 @@
 	</head>
 	<body>
 		<noscript>You need to enable JavaScript to run this app.</noscript>
-		<div id="Index"></div>
+		<div id="Application"></div>
 	</body>
 </html>
