--- a/src/client/index.html
+++ b/src/client/index.html
@@ -17,7 +17,7 @@
 		<meta name="twitter:dnt" content="on">
 		<meta http-equiv="x-ua-compatible" content="ie=edge">
 		<link href="/favicon.ico" rel="icon">
-		<link href="/manifest.json" rel="manifest">
+		<link rel="manifest" href="/manifest.webmanifest">
 		<link href="https://fonts.googleapis.com/css?family=Roboto:300,400,400i,500,700&display=swap" rel="stylesheet">
 		<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 		<style>
