--- a/src/client/index.html
+++ b/src/client/index.html
@@ -130,6 +130,9 @@
 			.Margin {
 				margin: var(--space); }
 
+			.MarginTop {
+				margin-top: var(--space); }
+
 			.MarginBottom {
 				margin-bottom: var(--space); }
 
