--- a/src/client/index.html
+++ b/src/client/index.html
@@ -161,6 +161,16 @@
 				display: flex;
 				align-items: center; }
 
+			.FlexListGap {
+				display: flex;
+				align-items: center;
+				gap: var(--space-half); }
+
+			.FlexListGapHalf {
+				display: flex;
+				align-items: center;
+				gap: var(--space-quart); }
+
 			.FlexListCenter {
 				display: flex;
 				align-items: center;
