--- a/src/client/index.html
+++ b/src/client/index.html
@@ -133,6 +133,9 @@
 			.MarginTop {
 				margin-top: var(--space); }
 
+			.MarginTopThreeQuart {
+				margin-top: var(--space-three-quart); }
+
 			.MarginBottom {
 				margin-bottom: var(--space); }
 
