--- a/src/client/index.html
+++ b/src/client/index.html
@@ -118,6 +118,9 @@
 			.Padding {
 				padding: var(--space); }
 
+			.PaddingTopBottom {
+				padding: var(--space) 0; }
+
 			.PaddingDouble {
 				padding: var(--space-double); }
 
@@ -126,6 +129,9 @@
 
 			.PaddingBottom {
 				padding-bottom: var(--space); }
+
+			.PaddingBottomHalf {
+				padding-bottom: var(--space-half); }
 
 			.Margin {
 				margin: var(--space); }
@@ -184,6 +190,11 @@
 				align-items: center;
 				justify-content: flex-end; }
 
+			.FlexListSpaceBetween {
+				display: flex;
+				align-items: center;
+				justify-content: space-between; }
+
 			.Content {
 				width: 1300px;
 				margin-left: auto;
@@ -222,6 +233,10 @@
 
 			.Text2 {
 				font-size: 16rem;
+				font-weight: 700; }
+
+			.Heading1 {
+				font-size: 33rem;
 				font-weight: 700; }
 
 			#Application {
