--- a/src/client/index.html
+++ b/src/client/index.html
@@ -139,8 +139,12 @@
 			.MarginTop {
 				margin-top: var(--space); }
 
+
 			.MarginTopThreeQuart {
 				margin-top: var(--space-three-quart); }
+
+			.MarginTopHalf {
+				margin-top: var(--space-half); }
 
 			.MarginBottom {
 				margin-bottom: var(--space); }
@@ -169,6 +173,10 @@
 			.FlexList {
 				display: flex;
 				align-items: center; }
+
+			.FlexListVert {
+				display: flex;
+				flex-direction: column; }
 
 			.FlexListGap {
 				display: flex;
@@ -242,8 +250,6 @@
 			#Application {
 				width: 100vw;
 				height: 100vh;
-				display: flex;
-				flex-direction: column;
 				background-color: var(--background-color); }
 		</style>
 	</head>
