--- a/src/client/index.html
+++ b/src/client/index.html
@@ -247,9 +247,15 @@
 				font-size: 33rem;
 				font-weight: 700; }
 
+			.Heading2 {
+				font-size: 19rem;
+				font-weight: 500; }
+
 			#Application {
 				width: 100vw;
 				height: 100vh;
+				display: flex;
+				flex-direction: column;
 				background-color: var(--background-color); }
 		</style>
 	</head>
