--- a/src/client/index.html
+++ b/src/client/index.html
@@ -121,6 +121,9 @@
 			.PaddingTopBottom {
 				padding: var(--space) 0; }
 
+			.PaddingLeftRight {
+				padding: 0 var(--space); }
+
 			.PaddingDouble {
 				padding: var(--space-double); }
 
@@ -136,9 +139,11 @@
 			.Margin {
 				margin: var(--space); }
 
+			.MarginHalf {
+				margin: var(--space-half); }
+
 			.MarginTop {
 				margin-top: var(--space); }
-
 
 			.MarginTopThreeQuart {
 				margin-top: var(--space-three-quart); }
