--- a/src/client/index.html
+++ b/src/client/index.html
@@ -2,20 +2,30 @@
 <html lang="en">
 	<head>
 		<title>Musicloud</title>
-		<meta charset="utf-8">
-		<meta name="viewport" content="minimum-scale=1, initial-scale=1, width=device-width, shrink-to-fit=no">
-		<meta name="application-name" content="music-app">
-		<meta name="description" content="music-app">
-		<meta name="theme-color" content="#ffffff">
-		<meta name="msapplication-navbutton-color" content="#FFFFFF">
-		<meta name="google" content="notranslate">
-		<meta name="robots" content="index,follow">
-		<meta name="apple-mobile-web-app-status-bar-style" content="#ffffff">
-		<meta name="mobile-web-app-capable" content="yes">
-		<meta name="skype_toolbar" content="skype_toolbar_parser_compatible">
-		<meta name="format-detection" content="telephone=no">
+
+		<meta name="application-name" content="Musicloud">
+		<meta name="description" content="Musicloud">
+		<meta name="keywords" content="Musicloud">
 		<meta name="twitter:dnt" content="on">
+		<meta name="google" content="notranslate">
+		<meta name="author" content="Oliver Plummer">
+
+		<meta name="og:type" content="PWA">
+		<meta name="og:title" content="Musicloud">
+		<meta name="og:url" content="localhost:3000">
+		<meta name="og:image" content="/icons/192.png">
+		<meta name="og:description" content="Musicloud">
+		
+		<meta charset="utf-8">
+		<meta name="robots" content="index,follow">
+		<meta name="theme-color" content="#ffffff">
+		<meta name="mobile-web-app-capable" content="yes">
+		<meta name="format-detection" content="telephone=no">
 		<meta http-equiv="x-ua-compatible" content="ie=edge">
+		<meta name="msapplication-navbutton-color" content="#FFFFFF">
+		<meta name="skype_toolbar" content="skype_toolbar_parser_compatible">
+		<meta name="apple-mobile-web-app-status-bar-style" content="#ffffff">
+		<meta name="viewport" content="minimum-scale=1, initial-scale=1, width=device-width, shrink-to-fit=no">
 		<link href="/favicon.ico" rel="icon">
 		<link rel="manifest" href="/manifest.webmanifest">
 		<link href="https://fonts.googleapis.com/css?family=Roboto:300,400,400i,500,700&display=swap" rel="stylesheet">
@@ -46,6 +56,7 @@
 
 				--space: 20rem;
 
+				--space-triple: calc(var(--space) * 3);
 				--space-double: calc(var(--space) * 2);
 				--space-one-half: calc(var(--space) * 1.5);
 				--space-one-quart: calc(var(--space) * 1.25);
