--- a/src/client/index.html
+++ b/src/client/index.html
@@ -132,6 +132,9 @@
 			.PaddingTopBottom {
 				padding: var(--space) 0; }
 
+			.PaddingLeft {
+				padding-left: var(--space); }
+
 			.PaddingLeftRight {
 				padding: 0 var(--space); }
 
@@ -190,10 +193,6 @@
 				display: flex;
 				align-items: center; }
 
-			.FlexListVert {
-				display: flex;
-				flex-direction: column; }
-
 			.FlexListGap {
 				display: flex;
 				align-items: center;
@@ -204,20 +203,10 @@
 				align-items: center;
 				gap: var(--space-quart); }
 
-			.FlexListCenter {
-				display: flex;
-				align-items: center;
-				justify-content: center; }
-
 			.FlexListRight {
 				display: flex;
 				align-items: center;
 				justify-content: flex-end; }
-
-			.FlexListSpaceBetween {
-				display: flex;
-				align-items: center;
-				justify-content: space-between; }
 
 			.Content {
 				width: 1300px;
