--- a/src/client/index.html
+++ b/src/client/index.html
@@ -220,6 +220,9 @@
 				margin-left: auto;
 				margin-right: auto; }
 
+			.BorderRadius {
+				border-radius: var(--border-radius); }
+
 			@media (max-width: 1360px) {
 				.Content {
 					width: auto;
