--- a/src/client/index.html
+++ b/src/client/index.html
@@ -160,6 +160,9 @@
 			.Margin {
 				margin: var(--space); }
 
+			.MarginTopBottomHalf {
+				margin: var(--space-half) 0; }
+
 			.MarginHalf {
 				margin: var(--space-half); }
 
