--- a/src/client/index.html
+++ b/src/client/index.html
@@ -63,12 +63,7 @@
 					--text-color-white: #333;
 					--text-color-light: #757575;
 					--background-color: #424242;
-					--border-color: #424242;
-					--webkitscrollbar-face-color: #646464; }
-				::-webkit-scrollbar {
-					background-color: var(--background-color); }
-				::-webkit-scrollbar-thumb {
-					background-color: var(--elevated-color); } }
+					--border-color: #424242; } }
 
 			@media (max-width: 500px) {
 				:root {
