--- a/src/client/index.html
+++ b/src/client/index.html
@@ -243,7 +243,7 @@
 				cursor: pointer;
 				transition: var(--transition-duration) background-color; }
 			.Hover:hover {
-				background-color: var(--hover-color); }
+				background-color: #f5f5f5; }
 
 			.ItemBorder {
 				border-bottom: 1px solid var(--border-color); }
